--- a/vedenin0941/src/app/ui/items/items.component.html
+++ b/vedenin0941/src/app/ui/items/items.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid d-flex justify-content-around mt-5">
+<div class="container-fluid d-flex justify-content-around flex-wrap mt-5">
   <div class="col-2">
     <div class="accordion accordion-flush" id="accordionFlushExample">
       <div class="accordion-item">
@@ -98,54 +98,56 @@
       </div>
     </div>
   </div>
-  <table class="table table-dark table-hover w-75">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Название</th>
-        <th scope="col">Артикул</th>
-        <th scope="col">Цена</th>
-        <th scope="col">Производитель</th>
-        <th scope="col">Категория</th>
-        <th scope="col">Вес</th>
-        <th scope="col">Кол-во на складе</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr
-        *ngFor="
-          let item of items
-            | category: category
-            | available: isset
-            | cost: cost
-            | amount: amount
-        "
-      >
-        <th scope="col" (click)="openItem(item.id)">#</th>
-        <td scope="col" (click)="openItem(item.id)">{{ item.name }}</td>
-        <td scope="col" (click)="openItem(item.id)">{{ item.article }}</td>
-        <td scope="col" (click)="openItem(item.id)">{{ item.cost }}</td>
-        <td scope="col" (click)="openItem(item.id)">{{ item.maker }}</td>
-        <td scope="col" (click)="openItem(item.id)">{{ item.category }}</td>
-        <td scope="col" (click)="openItem(item.id)">{{ item.weight }}</td>
-        <td scope="col">
-          <div class="d-flex align-items-center">
-            <i
-              class="fa fa-minus me-2"
-              aria-hidden="true"
-              (click)="minusItemData(item)"
-            ></i>
-            {{ item.amount }}
-            <i
-              class="fa fa-plus ms-2"
-              aria-hidden="true"
-              (click)="plusItemData(item)"
-            ></i>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table class="table table-dark table-hover">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Название</th>
+          <th scope="col">Артикул</th>
+          <th scope="col">Цена</th>
+          <th scope="col">Производитель</th>
+          <th scope="col">Категория</th>
+          <th scope="col">Вес</th>
+          <th scope="col">Кол-во на складе</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr
+          *ngFor="
+            let item of items
+              | category: category
+              | available: isset
+              | cost: cost
+              | amount: amount
+          "
+        >
+          <th scope="col" (click)="openItem(item.id)">#</th>
+          <td scope="col" (click)="openItem(item.id)">{{ item.name }}</td>
+          <td scope="col" (click)="openItem(item.id)">{{ item.article }}</td>
+          <td scope="col" (click)="openItem(item.id)">{{ item.cost }}</td>
+          <td scope="col" (click)="openItem(item.id)">{{ item.maker }}</td>
+          <td scope="col" (click)="openItem(item.id)">{{ item.category }}</td>
+          <td scope="col" (click)="openItem(item.id)">{{ item.weight }}</td>
+          <td scope="col">
+            <div class="d-flex align-items-center">
+              <i
+                class="fa fa-minus me-2"
+                aria-hidden="true"
+                (click)="minusItemData(item)"
+              ></i>
+              {{ item.amount }}
+              <i
+                class="fa fa-plus ms-2"
+                aria-hidden="true"
+                (click)="plusItemData(item)"
+              ></i>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 <app-menu></app-menu>
 
